  to still land in their home biome bands.  Fixes #856

--New FORGIVE EVERYONE command (which undoes all curses that you've ever
  issued).  CurseLog now includes lines for expiring curses (E) and forgiving
  everyone (A).  CurseDB code no longer worries about old key format (which
  changed more than 90 days ago).  Fixes #858



Server Fixes  (2023-July-7)

--Respawning Eves (that return to their own camps) on low-pop servers now crave
  all foods for their second craving and beyond.  Their first craving is still
  limited to low-tier foods.  Thanks Slinky.  Fixes #842

--Fixed counting of mothers, grandmothers, etc. in fitness.  Fixes #846

--Makefile now includes -auto-orient option to imagemagick convert command, as
  a work-around for a bug in certain versions of convert that flips images
  upside-down when converting to TGA.  Fixes jasonrohrer/OneLife#848

--Fixed so that heir that inherits property is fittest offspring or relative
  within 200 tiles of property itself (used to be fittest one that is within
  200 tiles of where the owner died, even if the owner was far away from the
  property in question).  Note that if none is found within 200 tiles of
  property, we still consider offspring (or relatives) at any distance as a
  fall-back.

--Fixed bug in code that searched for physically-distant relatives to inherit
  your property (if you had no offspring or physically-close relatives).
  Fixes #850

--Fixed a weird typo/bug in curseDB where we check for stale records by looking
  for ones that are older than curseDuration * curseCount, when it should just
  be older than curseDuration.  This may be left over from back when curse
  blocking got longer as the count grew.

--Changed block duration of personal curses (how long someone can't be born
  near you after you curse them) from 90 days to 50 years.  Fixes #851

--Changed curse-offline-count exponent from 2 to 1.5.  Thus, if 50 people total